WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110360
[New Multicolumn] Column gap is computed incorrectly
https://bugs.webkit.org/show_bug.cgi?id=110360
Summary
[New Multicolumn] Column gap is computed incorrectly
Dave Hyatt
Reported
2013-02-20 11:29:09 PST
We need to go to the parent block to get the column gap, since the RenderMultiColumnSet doesn't hold that value. :)
Attachments
Patch
(10.13 KB, patch)
2013-02-20 11:32 PST
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(10.19 KB, patch)
2013-02-20 11:33 PST
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2013-02-20 11:32:02 PST
Created
attachment 189346
[details]
Patch
Dave Hyatt
Comment 2
2013-02-20 11:33:49 PST
Created
attachment 189347
[details]
Patch
Simon Fraser (smfr)
Comment 3
2013-02-20 11:41:17 PST
Comment on
attachment 189347
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189347&action=review
> Source/WebCore/rendering/RenderMultiColumnSet.cpp:105 > + return parentBlock->style()->fontDescription().computedPixelSize(); // "1em" is recommended as the normal gap setting. Matches <p> margins.
The comment makes me think that computedPixelSize() returns a value equivalent to 1em, which is confusing.
> Source/WebCore/rendering/RenderMultiColumnSet.cpp:106 > + return static_cast<int>(parentBlock->style()->columnGap());
I think this should use clampToInteger() like roundedIntPoint() etc do. Weird that it's a float.
Dave Hyatt
Comment 4
2013-02-20 11:42:50 PST
(In reply to
comment #3
)
> (From update of
attachment 189347
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=189347&action=review
> > > Source/WebCore/rendering/RenderMultiColumnSet.cpp:105 > > + return parentBlock->style()->fontDescription().computedPixelSize(); // "1em" is recommended as the normal gap setting. Matches <p> margins. > > The comment makes me think that computedPixelSize() returns a value equivalent to 1em, which is confusing. > > > Source/WebCore/rendering/RenderMultiColumnSet.cpp:106 > > + return static_cast<int>(parentBlock->style()->columnGap()); > > I think this should use clampToInteger() like roundedIntPoint() etc do. Weird that it's a float.
Let me try just removing the cast completely. Technically now that subpixel layout is turned on, there is no reason to force the gap to be an integer any longer.
Dave Hyatt
Comment 5
2013-02-20 12:01:40 PST
Fixed in
r143484
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug