[New Multicolumn] Column gap is computed incorrectly. https://bugs.webkit.org/show_bug.cgi?id=110360.

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/multicol/newmulticol/layers-split-across-columns.html.

* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::columnGap):
Make sure we ask the RenderMultiColumnBlock for the gap rather than our
own style, since we don't actually have the gap value in our style.

(WebCore::RenderMultiColumnSet::flowThreadPortionOverflowRect):
* rendering/RenderMultiColumnSet.h:
Fix another spot where the columnGap was an int. It should be a LayoutUnit.

LayoutTests:

* fast/multicol/newmulticol/layers-split-across-columns-expected.html: Added.
* fast/multicol/newmulticol/layers-split-across-columns.html: Added.



Canonical link: https://commits.webkit.org/128660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143484 268f45cc-cd09-0410-ab3c-d52691b4dbfc